crates/strider/tests/snapshots/v2__arm__calling_convention__forward_4.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x640:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "11" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v16" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v16" [color="#888888", style=dashed];
  "v16" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v17" [color="#888888", style=dashed];
  "v17" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v18" [color="#888888", style=dashed];
  "v18" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "19" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "21" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "19" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "23" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "23" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "31" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "35" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "39" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="init\nr7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "40" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "43" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="init\nr8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "44" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "47" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "49" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "48" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
