crates/strider/tests/snapshots/v2__arm__calling_convention__mixed_4.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x718:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "9" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "11" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "6" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "18" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "10" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "1" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v20" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v20" [color="#888888", style=dashed];
  "v20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v21" [color="#888888", style=dashed];
  "v21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "22" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x11010:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "24" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "26" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "24" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x11010:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "28" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "30" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "34" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "38" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "42" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="init\nr7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "46" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="init\nr8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "50" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "52" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "52" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "51" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
